--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
   </head>
   <body>
     <div class="body">
-      <div id="board"></div>
+        <div id="board"></div>
+        <div style="text-align: center;">
+          <h1>Score</h1>
+          <h1 id="score">0</h1>
+        </div>
+    </div>
+      
     </div>
   </body>
   <script src="js/index.js"></script>
